examples/test/testpolicy13288.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13288
  namespace: namespace276
spec:
  podSelector:
    matchLabels:
      key42: value35
      key17: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value42
      podSelector:
        matchLabels:
          key40: value1
          key31: value25
          key37: value43
